// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

message ShareNameIdent {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // The user this share belongs to
  string tenant = 1;

  // share name
  string share_name = 2;
}

message ShareDatabaseObject {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // The user this db belongs to
  string tenant = 1;

  // Database name
  string db_name = 2;

  uint64 db_id = 3;
}

message ShareGrantObject {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  oneof object {
    uint64 db_id = 1;
    uint64 table_id = 2;
  }
}

message ShareGrantEntry {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  ShareGrantObject object = 1;
  uint64 privileges = 2;
  string grant_on = 3;
  optional string update_on = 4;
}

message ShareMeta {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  optional ShareGrantEntry database = 1;
  repeated ShareGrantEntry entries = 2;
  repeated string accounts = 3;
  optional string comment = 4;
  string share_on = 5;
  optional string update_on = 6;
  repeated uint64 share_from_db_ids = 7;
}

message ShareAccountMeta {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string account = 1;
  uint64 share_id = 2;
  string share_on = 3;
  optional string accept_on = 4;
}

message ObjectSharedByShareIds {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  repeated uint64 share_ids = 1;
}

message ShareEndpointMeta {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string url = 1;
  string tenant = 2;
  map<string, string> args = 3;
  optional string comment = 4;
  string create_on = 5;
}

message ShareEndpointIdent {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // The user this share belongs to
  string tenant = 1;

  // share endpoint name
  string endpoint = 2;
}